@@ -23,73 +23,17 @@
 
 // -------------------------------------------------------------------------------- //
 guLabelEditor::guLabelEditor( wxWindow* parent, guDbLibrary * db, const wxString &Title,
-                     const guListItems &listitems, const guArrayListItems &selitems ) :
+        const bool isradiolabel, const guListItems &listitems, const guArrayListItems &selitems ) :
              wxDialog( parent, wxID_ANY, Title, wxDefaultPosition, wxSize( 250,300 ), wxDEFAULT_DIALOG_STYLE )
 {
     m_Db = db;
     m_SelectedItem = wxNOT_FOUND;
+    m_IsRadioLabel = isradiolabel;
 
 	wxArrayString   Choices;
 	wxArrayInt      EnabledIds;
 	int index;
 	int count;
-
-//	SetSizeHints( wxDefaultSize, wxDefaultSize );
-//
-//	LabelEditorSizer = new wxBoxSizer( wxVERTICAL );
-//
-//
-//	LabelEditorSizer->Add( 0, 15, 0, wxEXPAND, 5 );
-//
-//	m_LabelsStaticText = new wxStaticText( this, wxID_ANY, _( "Labels" ), wxDefaultPosition, wxDefaultSize, 0 );
-//	m_LabelsStaticText->Wrap( -1 );
-//	LabelEditorSizer->Add( m_LabelsStaticText, 0, wxLEFT|wxRIGHT|wxTOP, 5 );
-//
-//	CheckListBoxSizer = new wxBoxSizer( wxHORIZONTAL );
-//
-//    count = listitems.Count();
-//    for( index = 0; index < count; index++ )
-//    {
-//        Choices.Add( listitems[ index ].m_Name );
-//        m_LabelIds.Add( listitems[ index ].m_Id );
-//    }
-//
-//	m_CheckListBox = new wxCheckListBox( this, wxID_ANY, wxDefaultPosition, wxDefaultSize, Choices, wxLB_MULTIPLE|wxLB_NEEDED_SB );
-//	CheckListBoxSizer->Add( m_CheckListBox, 1, wxALL|wxEXPAND, 5 );
-//
-//	wxBoxSizer* ButtonsSizer;
-//	ButtonsSizer = new wxBoxSizer( wxVERTICAL );
-//
-//	m_AddLabelBtn = new wxBitmapButton( this, wxID_ANY, guImage( guIMAGE_INDEX_tiny_add ), wxDefaultPosition, wxDefaultSize, wxBU_AUTODRAW );
-//	m_AddLabelBtn->SetToolTip( _( "Add a new label" ) );
-//
-//	ButtonsSizer->Add( m_AddLabelBtn, 0, wxALL, 5 );
-//
-//	m_DelLabelBtn = new wxBitmapButton( this, wxID_ANY, guImage( guIMAGE_INDEX_tiny_del ), wxDefaultPosition, wxDefaultSize, wxBU_AUTODRAW );
-//	m_DelLabelBtn->SetToolTip( _( "Delete the selected labels" ) );
-//	m_DelLabelBtn->Enable( false );
-//
-//	ButtonsSizer->Add( m_DelLabelBtn, 0, wxALL, 5 );
-//
-//	CheckListBoxSizer->Add( ButtonsSizer, 0, wxEXPAND, 5 );
-//
-//
-//	LabelEditorSizer->Add( CheckListBoxSizer, 1, wxEXPAND, 5 );
-//
-//	OptionsSizer = new wxBoxSizer( wxHORIZONTAL );
-//
-//	OptionsSizer->Add( 0, 0, 1, wxEXPAND, 5 );
-//
-//	m_LabelEditorBtnSizer = new wxStdDialogButtonSizer();
-//	m_LabelEditorBtnSizerOK = new wxButton( this, wxID_OK );
-//	m_LabelEditorBtnSizer->AddButton( m_LabelEditorBtnSizerOK );
-//	m_LabelEditorBtnSizerCancel = new wxButton( this, wxID_CANCEL );
-//	m_LabelEditorBtnSizer->AddButton( m_LabelEditorBtnSizerCancel );
-//	m_LabelEditorBtnSizer->Realize();
-//	LabelEditorSizer->Add( m_LabelEditorBtnSizer, 0, wxEXPAND|wxBOTTOM|wxRIGHT|wxLEFT, 5 );
-//
-//	SetSizer( LabelEditorSizer );
-//	Layout();
 
 	this->SetSizeHints( wxDefaultSize, wxDefaultSize );
 
@@ -206,7 +150,15 @@ void guLabelEditor::OnAddLabelBtnClick( wxCommandEvent &event )
     wxTextEntryDialog * EntryDialog = new wxTextEntryDialog( this, _( "Label Name: " ), _( "Please enter the label name" ) );
     if( EntryDialog->ShowModal() == wxID_OK )
     {
-        int AddedId = m_Db->AddLabel( EntryDialog->GetValue() );
+        int AddedId;
+        if( m_IsRadioLabel )
+        {
+            AddedId = m_Db->AddRadioLabel( EntryDialog->GetValue() );
+        }
+        else
+        {
+            AddedId = m_Db->AddLabel( EntryDialog->GetValue() );
+        }
         m_CheckListBox->Append( EntryDialog->GetValue() );
         m_LabelIds.Add( AddedId );
     }
@@ -223,7 +175,14 @@ void guLabelEditor::OnDelLabelBtnClick( wxCommandEvent &event )
                           _( "Confirm" ),
                           wxICON_QUESTION | wxYES_NO | wxCANCEL, this ) == wxYES )
         {
-            m_Db->DelLabel( m_LabelIds[ m_SelectedItem ] );
+            if( m_IsRadioLabel )
+            {
+                m_Db->DelRadioLabel( m_LabelIds[ m_SelectedItem ] );
+            }
+            else
+            {
+                m_Db->DelLabel( m_LabelIds[ m_SelectedItem ] );
+            }
             m_CheckListBox->Delete( m_SelectedItem );
         }
     }
